footer e header em todas as páginas

--- a/Front/vite-project/src/index.html
+++ b/Front/vite-project/src/index.html
@@ -37,16 +37,16 @@
             <li class="menu-item btn btn-secondary" id="dropdownColab"  aria-haspopup="true" aria-expanded="false" data-offset="10,20">
               <a href="#">Colabore</a>
               <ul class="dropdown-menu">
-                <li class="menu-item dropdown-item"><a href="./templates/animais_regioes.html">Doações</a></li>
-                <li class="menu-item dropdown-item"><a href="./templates/animais_regioes.html">Apadrinhamento</a></li>
-                <li class="menu-item dropdown-item"><a href="./templates/animais_especies.html">Voluntariado</a></li>
+                <li class="menu-item dropdown-item"><a href="./templates/doacao.html">Doações</a></li>
+                <li class="menu-item dropdown-item"><a href="./templates/apadrinhamento.html">Apadrinhamento</a></li>
+                <li class="menu-item dropdown-item"><a href="./templates/cadastro_voluntario.html">Voluntariado</a></li>
               </ul>
             </li>
             <li class="menu-item btn btn-secondary" id="dropdownConta"  aria-haspopup="true" aria-expanded="false" data-offset="10,20">
               <a href="#">Minha conta</a>
               <ul class="dropdown-menu">
-                <li class="menu-item dropdown-item"><a href="./templates/animais_regioes.html">Registro</a></li>
-                <li class="menu-item dropdown-item"><a href="./templates/animais_regioes.html">Login</a></li>
+                <li class="menu-item dropdown-item"><a href="./templates/registro.html">Registro</a></li>
+                <li class="menu-item dropdown-item"><a href="./templates/login.html">Login</a></li>
               </ul>
             </li>
           </ul>
@@ -67,16 +67,16 @@
             <li class="menu-item btn btn-secondary" id="dropdownColabDkt"  aria-haspopup="true" aria-expanded="false" data-offset="10,20">
               <a href="#">Colabore</a>
               <ul class="dropdown-menu-dkt">
-                <li class="menu-item dropdown-item"><a href="./templates/animais_regioes.html">Doações</a></li>
-                <li class="menu-item dropdown-item"><a href="./templates/animais_regioes.html">Apadrinhamento</a></li>
-                <li class="menu-item dropdown-item"><a href="./templates/animais_especies.html">Voluntariado</a></li>
+                <li class="menu-item dropdown-item"><a href="./templates/doacao.html">Doações</a></li>
+                <li class="menu-item dropdown-item"><a href="./templates/apadrinhamento.html">Apadrinhamento</a></li>
+                <li class="menu-item dropdown-item"><a href="./templates/cadastro_voluntario.html">Voluntariado</a></li>
               </ul>
             </li>
             <li class="menu-item btn btn-secondary" id="dropdownContaDkt"  aria-haspopup="true" aria-expanded="false" data-offset="10,20">
               <a href="#">Minha conta</a>
               <ul class="dropdown-menu-dkt">
-                <li class="menu-item dropdown-item"><a href="./templates/animais_regioes.html">Registro</a></li>
-                <li class="menu-item dropdown-item"><a href="./templates/animais_regioes.html">Login</a></li>
+                <li class="menu-item dropdown-item"><a href="./templates/registro.html">Registro</a></li>
+                <li class="menu-item dropdown-item"><a href="./templates/login.html">Login</a></li>
               </ul>
             </li>
           </ul>
